# ha-bb8-addon

./: .HA_ADDON_README.md  .coverage  .coveragerc  .coveragerc.pr60  .dockerignore  .editorconfig  .env  .env.bleep.example  .evidence.env  .gitattributes  .gitignore  .gitignore.bak  .pre-commit-config.yaml  .ruffignore  .safety-project.ini  :q  CHANGELOG.md  Dockerfile  GIT_TOPOLOGY_RESOLUTION_SUCCESS.md  GIT_TOPOLOGY_SYNC_FIX.md  HA-BB8-root.code-workspace  HA-BB8-root.code-workspace.backup  MANUAL_DEPLOYMENT_P0_FIX.md  Makefile  Makefile.bak  README.md  __init__.py  addon  apparmor.txt  bb8_ascii_templates.py  bb8_deep_analysis_report_2025-01-04.md  bb8_presence_scanner.py  bb8_wake_replication.py  collect_ha_bb8_diagnostics.sh  config.yaml  coverage.xml  coverage_baseline_reality.json  coverage_full.txt  debug_echo_env.py  docs  (+15 more)
.devcontainer/: Dockerfile  devcontainer.json  index.jsonl
.githooks/: index.jsonl  post-commit  post-merge  pre-commit  pre-push
.github/: PR_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  index.jsonl
_backup/: README.md
_backups/: addon_git_20250823_172732Z.tgz  stray_app_20250823_100519Z.tgz  stray_bb8_core_20250823_100519Z.tgz
_tarballs/: adr-20251027T104727Z.sha256
addon/: .HA_ADDON_README.md  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  config.yaml  index.jsonl  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run.sh
app/: test_ble_adapter.py
bb8_core/: __init__.py  addon_config.py  auto_detect.py  b1_probe.py  bb8_presence_scanner.py  (+44 more)
(+1363 files in other folders)
